fdo#54898: Test equality by order index (integer) which is more stable.

At the point where std::unique is called, we can use order indices to
determine whether the two items are equal. This should be more stable
than using CaseInsEqual() to assess equality.

Change-Id: I88310fc7beede19fb1c629b9b7e3cb9a069b2b23